--- a/backend/api-gateway/package.json
+++ b/backend/api-gateway/package.json
@@ -34,6 +34,7 @@
     "rxjs": "^7.8.1"
   },
   "devDependencies": {
+    "@biomejs/biome": "1.9.3",
     "@nestjs/cli": "^10.0.0",
     "@nestjs/schematics": "^10.0.0",
     "@nestjs/testing": "^10.0.0",
