build: change biomejs to support tsx

--- a/frontend/biome.json
+++ b/frontend/biome.json
@@ -32,7 +32,7 @@
 	},
 	"overrides": [
 		{
-			"include": ["*.ts"],
+			"include": ["*.tsx", "*.ts"],
 			"linter": {
 				"rules": {
 					"style": {
