--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,8 @@
 		"@chakra-ui/react": "^2.10.2",
 		"@emotion/react": "^11.13.3",
 		"@emotion/styled": "^11.13.0",
+		"@tanstack/react-query": "^5.59.13",
+		"axios": "^1.7.7",
 		"framer-motion": "^11.11.7",
 		"react": "^18.3.1",
 		"react-dom": "^18.3.1",
