chore: change docker-compose.yml

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -31,6 +31,8 @@ services:
     build:
       context: ./backend/microservices/mercadolivre
       dockerfile: Dockerfile
+    env_file:
+      - ./backend/microservices/mercadolivre/.env
     command: npm run start:dev
     volumes:
       - ./backend/microservices/mercadolivre:/app
