--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,7 +7,8 @@
 		"dev": "vite",
 		"build": "tsc -b && vite build",
 		"lint": "eslint .",
-		"preview": "vite preview"
+		"preview": "vite preview",
+		"test": "vitest --watch"
 	},
 	"dependencies": {
 		"@chakra-ui/icons": "^2.2.4",
@@ -24,6 +25,8 @@
 	"devDependencies": {
 		"@biomejs/biome": "1.9.3",
 		"@eslint/js": "^9.11.1",
+		"@testing-library/jest-dom": "^6.5.0",
+		"@testing-library/react": "^16.0.1",
 		"@types/react": "^18.3.10",
 		"@types/react-dom": "^18.3.0",
 		"@vitejs/plugin-react": "^4.3.2",
@@ -31,8 +34,10 @@
 		"eslint-plugin-react-hooks": "^5.1.0-rc.0",
 		"eslint-plugin-react-refresh": "^0.4.12",
 		"globals": "^15.9.0",
+		"jsdom": "^25.0.1",
 		"typescript": "^5.5.3",
 		"typescript-eslint": "^8.7.0",
-		"vite": "^5.4.8"
+		"vite": "^5.4.8",
+		"vitest": "^2.1.3"
 	}
 }
