--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,6 +3,8 @@ services:
     build:
       context: ./frontend
       dockerfile: Dockerfile
+    env_file:
+      - ./frontend/.env
     command: npm run dev
     ports:
       - "5173:5173"
@@ -17,6 +19,8 @@ services:
     build:
       context: ./backend/api-gateway
       dockerfile: Dockerfile
+    env_file:
+      - ./backend/api-gateway/.env
     command: npm run start:dev
     ports:
       - "3000:3000"
